[tool.poetry]
name = "pytest-poetry-test-coverage-example"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
coverage = "^7.6.1"

[tool.coverage.run]
dynamic_context = "test_function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
